--- a/public/test/audio-player.mspec.html
+++ b/public/test/audio-player.mspec.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Mocha Tests for Heuristocratic.Midi</title>
+  <title>Mocha Tests for Heuristocratic.AudioPlayer</title>
   <link rel="stylesheet" href="/css/mocha.css" />
 </head>
 <body>
@@ -9,9 +9,8 @@
   <script src="/js/chai.js"></script>
   <script src="/js/mocha.js"></script>
   <script>mocha.setup('bdd')</script>
-  <script src="/js/d3.js"></script>
-  <script src="/js/midi.js"></script>
-  <script src="/test/midi.mspec.js"></script>
+  <script src="/js/audio-player.js"></script>
+  <script src="/test/audio-player.mspec.js"></script>
   <script>
     expect = chai.expect,
     mocha.checkLeaks();
