basic tests for pipeline renderer

--- a/public/test/test-all.mspec.html
+++ b/public/test/test-all.mspec.html
@@ -16,6 +16,7 @@
   <script src="/js/midi.js"></script>
   <script src="/test/midi.mspec.js"></script>
   <script src="/js/midi-visualizer.js"></script>
+  <script src="/js/midi-visualizer-pipeline.js"></script>
   <script src="/test/midi-visualizer-pipeline.mspec.js"></script>
   <script src="/test/midi-visualizer.mspec.js"></script>
   <script>
